...
    <include
        android:id="@+id/container_image"
        layout="@layout/container_display_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/toolbar" />

    <net.gini.switchsdk.camera.CameraSurfacePreview
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
...
        android:layout_height="match_parent"
        android:background="#80ffffff"
        android:padding="128dp"
        android:visibility="gone" />

    <include
        android:id="@+id/onBoardingContainer"
        layout="@layout/container_onboarding" />

    <include
        layout="@layout/container_analyzed_screen"
        android:visibility="gone" />
</RelativeLayout>
...
